force-app/main/default/objects/Deming_Log__c/Deming_Log__c.object-meta.xml
<CustomObject>
    <label>Deming Log</label>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Deming Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deming Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>