force-app/main/default/objects/Deming_Log__c/fields/ccAddress__c.field-meta.xml
<CustomField>
    <fullName>ccAddress__c</fullName>
    <label>ccAddress</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>