force-app/main/default/objects/Deming_Log__c/fields/Customer_Names__c.field-meta.xml
<CustomField>
    <fullName>Customer_Names__c</fullName>
    <label>Customer Names</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>