force-app/main/default/objects/Deming_Log__c/fields/TO_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>TO_Email_ID__c</fullName>
    <label>TO Email ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>