force-app/main/default/objects/Deming_Log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <length>15</length>
    <type>Text</type>
</CustomField>